--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World ahahahaha</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Gary Situ's CS328 Games</h1>
+<p>Here are the games:</p>
 </body>
 </html>
