Update index.html to include P1 game
Added CS 328 Project 1 game to the website as an embedded game uploaded on simmer.io

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Gary Situ's CS328 Games</h1>
 <p>Here are the games:</p>
+<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2Ff815004d-7fb6-d3b1-7cf5-2d044324df47&imagePath=screens/2.png" style="width:960px;height:600px;border:0"></iframe>
 </body>
 </html>
