--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <body>
 <h1>Gary Situ's CS328 Games</h1>
 <p>CS 328 - Project 1 Game (Two-player combat game): Ten Hit Shootout</p>
+<p>How to play: </p>
+<p>Player 1 controls their character using WASD and uses Space to shoot.</p>
+<p>Player 1 controls their character using Numpad 8456 (just like WASD) and uses Numpad 0 to shoot.</p>
+<p>Once a player has lost all 10/10 of their health, the other player wins. To restart, press Space.</p>
 <iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2Ff815004d-7fb6-d3b1-7cf5-2d044324df47&imagePath=screens/2.png" style="width:960px;height:600px;border:0"></iframe>
 </body>
 </html>
