--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <p>How to play: </p>
 <p>Player 1 (on the left) controls their character using WASD and uses Space to shoot.</p>
 <p>Player 2 (on the right) controls their character using Numpad 8456 (just like WASD) and uses Numpad 0 to shoot.</p>
+<p>   Items:</p>
+<p>      Pink - Health (Restores 3 health)</p>
+<p>      Light Blue - Fire Rate (Fire rate improved for 5 seconds)</p>
+<p>      Blue - Speed (Move and turn faster for 5 seconds)</p>
 <p>Once a player has lost all 10/10 of their health, the other player wins. To restart, press Space.</p>
-<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2Ff815004d-7fb6-d3b1-7cf5-2d044324df47&imagePath=screens/2.png" style="width:960px;height:600px;border:0"></iframe>
+<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2Fa43623c4-be9a-cf8b-eadc-98ce813417b4&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe>
 </body>
 </html>
