--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
 <body>
 <h1>Gary Situ's CS328 Games</h1>
+<h3>Project 2:</h3>
+<p>CS 328 - Project 2: Knock Them Down (Angry Birds-like game)</p>
+<p>How to play: </p>
+<p>Controls:</p>
+<p>  Camera Controls:</p>
+<p>     The camera is centered on the starting position, and follows the player's ball after shooting. To see the rest of the map, you might need to use the manual camera.</p>
+<p>     Press TAB to enter the manual camera. Press A or D to scroll left and right. Press TAB again to enter the stationary camera.</p>
+<p>  Player Controls:</p>
+<p>     Click and drag to release. The farther you drag (up to a limit) the faster the ball is thrown.</p>
+<p>  Levels and Rules:</p>
+<p>     Level one gives the player 3 lives (balls). Level two and three gives the player 5 lives due to increased difficulty.</p>
+<p>     To <b>win</b>, eliminate all the enemy cats strewn across each level.</p>
+<p>     Enemies are eliminated when collided with enough force, and can be eliminated from both the player and the environment (physical objects colliding due to physics).</p>
+<p>     Map structure objects like walls and floors cannot be destroyed, though can be used to your advantage (slopes, physics, etc.)</p>
+<p>     Players <b>lose</b> when they have used up all their lives and have not eliminated all the enemies.</p>
+<p>         <b>NOTE: </b> At the top right there are two buttons, the left one restarts the level and the right one exits to the menu.</p>
+<p> </p>
+<h2>Old projects below</h2>
+<h3>Project 1:</h3>
 <p>CS 328 - Project 1 Game (Two-player combat game): Ten Hit Shootout</p>
 <p>How to play: </p>
 <p>Player 1 (on the left) controls their character using WASD and uses Space to shoot.</p>
