--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <body>
 <h1>Gary Situ's CS328 Games</h1>
-<h3>Project 2:</h3>
-<p>CS 328 - Project 2: Knock Them Down (Angry Birds-like game)</p>
-<p>How to play: </p>
-<p>Controls:</p>
-<p>  Camera Controls:</p>
+<h2>Project 2:</h2>
+<h2>CS 328 - Project 2: <b>Knock Them Down</b> (Angry Birds-like game)</h2>
+<h3>How to play: </h3>
+<h4><b>Controls:</b></h4>
+<h5>  <i><b>Camera Controls:</b></i></h5>
 <p>     The camera is centered on the starting position, and follows the player's ball after shooting. To see the rest of the map, you might need to use the manual camera.</p>
 <p>     Press TAB to enter the manual camera. Press A or D to scroll left and right. Press TAB again to enter the stationary camera.</p>
-<p>  Player Controls:</p>
+<h5><i><b>Player Controls:</b></i></h5>
 <p>     Click and drag to release. The farther you drag (up to a limit) the faster the ball is thrown.</p>
-<p>  Levels and Rules:</p>
+<h5><i><b>Levels and Rules:</b></i></h5>
 <p>     Level one gives the player 3 lives (balls). Level two and three gives the player 5 lives due to increased difficulty.</p>
 <p>     To <b>win</b>, eliminate all the enemy cats strewn across each level.</p>
 <p>     Enemies are eliminated when collided with enough force, and can be eliminated from both the player and the environment (physical objects colliding due to physics).</p>
@@ -19,6 +19,7 @@
 <p>     Players <b>lose</b> when they have used up all their lives and have not eliminated all the enemies.</p>
 <p>         <b>NOTE: </b> At the top right there are two buttons, the left one restarts the level and the right one exits to the menu.</p>
 <p> </p>
+<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2F29eb62e6-fe69-685f-faa5-378e872acade&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe>
 <h2>Old projects below</h2>
 <h3>Project 1:</h3>
 <p>CS 328 - Project 1 Game (Two-player combat game): Ten Hit Shootout</p>
