--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <p>     Map structure objects like walls and floors cannot be destroyed, though can be used to your advantage (slopes, physics, etc.)</p>
 <p>     Players <b>lose</b> when they have used up all their lives and have not eliminated all the enemies.</p>
 <p>         <b>NOTE: </b> At the top right there are two buttons, the left one restarts the level and the right one exits to the menu.</p>
+<p>All assets besides the ingame music were created by me.</p>
 <p> </p>
 <iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2F29eb62e6-fe69-685f-faa5-378e872acade&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe>
 <h2>Old projects below</h2>
