--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <p>         <b>NOTE: </b> At the top right there are two buttons, the left one restarts the level and the right one exits to the menu.</p>
 <p>All assets besides the ingame music were created by me.</p>
 <p> </p>
-<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2F1a9561c7-3702-3f4f-1c34-f9a3055fa3b0&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe><h2>Old projects below</h2>
+<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2F1a9561c7-3702-3f4f-1c34-f9a3055fa3b0&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe>
+<h2>Old projects below</h2>
 <h3>Project 1:</h3>
 <p>CS 328 - Project 1 Game (Two-player combat game): Ten Hit Shootout</p>
 <p>How to play: </p>
