--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 <body>
 <h1>Gary Situ's CS328 Games</h1>
+<h2>Team #8: G1 Collaboration Game - Vault-Dash</h2>
+<h5><i><b>Controls:</b></i></h5>
+<p> &emsp;A to move left. D to move right. TAB to switch characters. Space to use ability.</p>
+<h5><i><b>How to Win:</b></i></h5>
+<p> &emsp;Utilize the two different abilities between the characters to solve the puzzle elements and to complete the level.</p>
+<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fj7oHrRLrz0MIgmBYvtZa9VhwMsf2%2Fcontent%2F34b1ecc4-c364-6387-0961-5113cd4acc30&imagePath=screens/0.png" style="width:1024px;height:576px;border:0"></iframe>
+<h2>____________________________________<br> <br> <br></h2>
 <h2>Project 2:</h2>
 <h2>CS 328 - Project 2: <b>Knock Them Down</b> (Angry Birds-like game)</h2>
 <h3>How to play: </h3>
@@ -19,7 +26,7 @@
 <p>     Players <b>lose</b> when they have used up all their lives and have not eliminated all the enemies.</p>
 <p>         <b>NOTE: </b> At the top right there are two buttons, the left one restarts the level and the right one exits to the menu.</p>
 <p>All assets besides the ingame music were created by me.</p>
-<p> </p>
+<p> <br> <br> <br></p>
 <iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2F1a9561c7-3702-3f4f-1c34-f9a3055fa3b0&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe>
 <h2>Old projects below:</h2>
 <h3>Project 1:</h3>
