--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Gary Situ's CS328 Games</h1>
+<h1>Team 8 CS328 Games</h1>
+<h2>Team #8: G2 Collaboration Game - Prism</h2>
+<h5><i><b>Controls:</b></i></h5>
+<p> &emsp;A to move left. D to move right. W to jump. SPACE to switch characters.</p>
+<h5><i><b>How to Win:</b></i></h5>
+<p> &emsp;Switch between the characters to solve the puzzles found in each level! Win by making it to the door!</p>
+<iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2Fda103248-870d-8352-fb29-b50e8b131a0a&imagePath=screens/0.png" style="width:2500px;height:1080px;border:0"></iframe>
+<p><br> <br> <br></p>
 <h2>Team #8: G1 Collaboration Game - Vault-Dash</h2>
 <h5><i><b>Controls:</b></i></h5>
 <p> &emsp;A to move left. D to move right. TAB to switch characters. Space to use ability.</p>
@@ -27,6 +34,7 @@
 <p>         <b>NOTE: </b> At the top right there are two buttons, the left one restarts the level and the right one exits to the menu.</p>
 <p>All assets besides the ingame music were created by me.</p>
 <p> <br> <br> <br></p>
+<h1>Gary Situ CS328 Games</h1>
 <iframe src="https://c.simmer.io/static/unityFrame/index.html?url=https%3A%2F%2Fsimmercdn.com%2Funity%2Fssf6k4s6EoY53pyxz4GOiYW2SpI3%2Fcontent%2F1a9561c7-3702-3f4f-1c34-f9a3055fa3b0&imagePath=screens/0.png" style="width:960px;height:600px;border:0"></iframe>
 <h2>Old projects below:</h2>
 <h3>Project 1:</h3>
